[metadata]
name = crossmapper
version = 1.0.0
description = Mutalyzer HGVS position crossmapper.
long_description = file: README.rst
author = Jeroen F.J. Laros
author_email = J.F.J.Laros@lumc.nl
url = https://github.com/mutalyzer/crossmapper
keywords = Mutalyzer, HGVS, position, crossmap, convert
license = MIT
classifiers =
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
copyright = 2009-2019

[options]
packages = find:
install_requires =
    configparser==3.5.0
tests_require =
    pytest==4.0.1

[options.package_data]
crossmapper = setup.cfg

[options.entry_points]
console_scripts =
