[metadata]
name = crossmapper
version = 1.0.1
description = Mutalyzer HGVS position crossmapper.
long_description = file: README.rst
author = Jeroen F.J. Laros
author_email = J.F.J.Laros@lumc.nl
url = https://github.com/mutalyzer/crossmapper
keywords = Mutalyzer, HGVS, position, crossmap, convert
license = MIT
classifiers =
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
packages = find:
tests_require =
    pytest==4.0.1
