[metadata]
name = mutalyzer_crossmapper
version = 2.0.0
description = Mutalyzer HGVS position crossmapper.
long_description = file: README.rst
author = Jeroen F.J. Laros
author_email = J.F.J.Laros@lumc.nl
url = https://github.com/mutalyzer/crossmapper
keywords = Mutalyzer, HGVS, position, crossmap, convert
license = MIT
classifiers =
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
packages = find:

[options.extras_require]
tests =
    pytest-cov==2.10.0
    pytest-pep8==1.0.6
    pytest==5.4.3
    tox-travis==0.12

[tool:pytest]
pep8ignore = docs/conf.py ALL

[coverage:run]
source = mutalyzer_crossmapper

[flake8]
per-file-ignores =
    mutalyzer_crossmapper/__init__.py: F401
    docs/conf.py: E402
